--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@ body{
 .home-container{
     margin: auto;
     width: 70%;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 /* ------- */
 
@@ -34,10 +34,12 @@ body{
     justify-content: space-between;
 }
 .logo{
-    font-size: 28px;
+    font-size: 34px;
     font-family: 'Lato', sans-serif;
     font-weight: bold;
     color: #555;
+    width: 125px;
+    margin-left: -62.5px;
 }
 a{
     text-decoration: none;
@@ -53,7 +55,7 @@ a{
 }
 .category{
     width: 180px;
-    border: 1px solid #ccc;
+    border-bottom: 2px solid #ccc;
     justify-content: center;
     padding: 5px;
     color: #555;
@@ -61,7 +63,7 @@ a{
 }
 
 .active{
-    background-color: #ddd;
+    border-bottom: 2px solid #555;
 }
 /* ----- */
 
@@ -76,6 +78,59 @@ a{
     text-align: center;
     font-size: 18px;
     color: #555;
+}
+
+
+/* ----- */
+
+/* Auth */
+.login-container{
+    width: 70%;
+    margin: auto;
+    margin-top: 60px;
+    text-align: center;
+}
+
+.auth-container{
+    margin: auto;
+    width: 25%;
+    height: 250px;
+}
+form{
+    height:100%;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.form-input{
+    width: 100%;
+    height: 20px;
+    outline: none;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    padding: 7px;
+}
+
+.auth-container span{
+    padding: 8px;
+    border-radius: 50%;
+    background-color: #555;
+    color: white;
+    font-size: 21px;
+}
+
+.btn{
+    margin-top: 15px;
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    width: 100%;
+    padding: 7px;
+    cursor: pointer;
+    font-size: 15px;
+    box-sizing: content-box;
 }
 
 
