--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,7 +107,7 @@ a{
     width: 25%;
     height: 250px;
 }
-form{
+.auth-form{
     height:100%;
     flex-direction: column;
     justify-content: space-around;
@@ -168,15 +168,30 @@ form{
     gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
-
-
 .product-container{
     width: 295px;
-    /* height: 200px; */
+    height: 360px;
     border: 1px solid #ccc;
     text-align: center;
     margin: auto;
     margin-bottom: 20px;
+    position: relative;
+}
+
+.delete-info{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+}
+
+.add-button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 /* ----- */
 
@@ -209,6 +224,41 @@ form{
 
 /* ---- */
 
-/* Product-card     */
+/* Create Form */
+.form-container{
+    width: 100%;
+    height: 100%;
+}
 
+.create-form-input{
+    width: 80%;
+    height: 15px;
+    outline: none;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    padding: 7px;
+    margin: 8px;
+}
+
+.create-label{
+    width: 80%;
+    display: block;
+    text-align: left;
+    font-size: 12px;
+    color: #555;
+    margin: 5px auto 0 auto;
+}
+.create-btn{
+    margin-top: 35px;
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    width: 80%;
+    padding: 5px;
+    cursor: pointer;
+    font-size: 15px;
+    box-sizing: content-box;
+}
 /* ---- */
