--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,20 +179,21 @@ a{
 }
 
 .delete-info{
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     width: 100%;
     justify-content: center;
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
+    animation: animate 0.5s;
 }
 
-.add-button{
+/* .add-button{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
+} */
 /* ----- */
 
 /* Pagination */
@@ -228,6 +229,7 @@ a{
 .form-container{
     width: 100%;
     height: 100%;
+    animation: animate 0.5s;
 }
 
 .create-form-input{
@@ -262,3 +264,8 @@ a{
     box-sizing: content-box;
 }
 /* ---- */
+
+@keyframes animate{
+    from {transform: scale(0);}
+    to {transform: scale(1);}
+}
